# CppLyrics

./: .gitignore  .gitmodules  CMakeLists.txt  CppLyricsGLFWWindow.h  Lyric.h  LyricParser.cpp  LyricParser.h  README.md  Utils.h  bncm.cpp  lyric.txt  lyric2.txt  main.cpp  main.h  pch.h  winshit.cpp
backend/: CppLyricsGLFWVulkanWindow.cpp  CppLyricsGLFWVulkanWindow.h  CppLyricsGLFWWindow.cpp  CppLyricsGLFWWindow.h
data/: DataSource.cpp  DataSource.h
entry/: bncm.cpp  demo.cpp
parser/: LyricParser.cpp  LyricParser.h
render/: DynamicLyricWordRenderer.h  DynamicLyricWordRendererNormal.h  RenderTextWrap.h
utils/: Utils.cpp  Utils.h
